--- a/pom.xml
+++ b/pom.xml
@@ -3,4 +3,111 @@
   <groupId>mx.habil.framework</groupId>
   <artifactId>habil</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <properties>
+    <jdk.version>1.7</jdk.version>
+    <org.springframework.version>4.1.1.RELEASE</org.springframework.version>
+    <org.springframework.security.version>3.2.5.RELEASE</org.springframework.security.version>
+    <org.springframework.ldap.version>2.0.2.RELEASE</org.springframework.ldap.version>
+    <org.hibernate.version>4.3.6.Final</org.hibernate.version>
+    <javax.validation.version>1.1.0.Final</javax.validation.version>
+    <org.projectlombok.version>1.14.8</org.projectlombok.version>
+    <javax.servlet.version>2.5</javax.servlet.version>
+  </properties>
+  
+  <build>
+        <finalName>habil</finalName>
+        <plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.3.2</version>
+				<configuration>
+					<source>${jdk.version}</source>
+					<target>${jdk.version}</target>
+				</configuration>
+			</plugin>
+		</plugins>
+    </build>
+    
+    <dependencies>
+		
+	    <dependency>
+	        <groupId>org.hibernate</groupId>
+	        <artifactId>hibernate-core</artifactId>
+	        <version>${org.hibernate.version}</version>
+	        <scope>provided</scope>
+	    </dependency>
+	    
+	    
+	    <dependency>
+	        <groupId>org.springframework</groupId>
+	        <artifactId>spring-context</artifactId>
+	        <version>${org.springframework.version}</version>
+	        <scope>provided</scope>
+	    </dependency>
+	    <dependency>
+	        <groupId>org.springframework</groupId>
+	        <artifactId>spring-tx</artifactId>
+	        <version>${org.springframework.version}</version>
+	        <scope>provided</scope>
+	    </dependency>
+	    <dependency>
+	        <groupId>org.springframework</groupId>
+	        <artifactId>spring-orm</artifactId>
+	        <version>${org.springframework.version}</version>
+	        <scope>provided</scope>
+	    </dependency>
+    
+	    <dependency>
+	        <groupId>org.springframework.security</groupId>
+	        <artifactId>spring-security-web</artifactId>
+	        <version>${org.springframework.security.version}</version>
+	        <scope>provided</scope>
+	    </dependency>
+	    
+	    <dependency>
+		   <groupId>org.springframework.ldap</groupId>
+		   <artifactId>spring-ldap-core</artifactId>
+		   <version>${org.springframework.ldap.version}</version>
+		   <scope>provided</scope>
+		   <exclusions>
+		   	<exclusion>
+		   		<artifactId>slf4j-api</artifactId>
+		   		<groupId>org.slf4j</groupId>
+		   	</exclusion>
+		   	<exclusion>
+		   		<artifactId>jcl-over-slf4j</artifactId>
+		   		<groupId>org.slf4j</groupId>
+		   	</exclusion>
+		   </exclusions>
+		</dependency>
+	 
+		<dependency>
+		   <groupId>org.springframework.ldap</groupId>
+		   <artifactId>spring-ldap-core-tiger</artifactId>
+		   <version>${org.springframework.ldap.version}</version>
+		   <scope>provided</scope>
+		</dependency>
+	    
+	    <dependency>
+		   <groupId>javax.validation</groupId>
+		   <artifactId>validation-api</artifactId>
+		   <version>${javax.validation.version}</version>
+		   <scope>provided</scope>
+		</dependency>
+	                            
+	    <dependency>
+	         <groupId>org.projectlombok</groupId>
+	         <artifactId>lombok</artifactId>
+	         <version>${org.projectlombok.version}</version>
+	       <scope>provided</scope>
+	     </dependency>
+	     
+	     <dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>servlet-api</artifactId>
+			<version>${javax.servlet.version}</version>
+			<scope>provided</scope>
+		</dependency>
+  </dependencies>
 </project>
